fix stylings / overflows

--- a/public/global.css
+++ b/public/global.css
@@ -1,3 +1,4 @@
 body {
   background: transparent !important;
+  overflow: hidden;
 }
